# xs

./: .gitignore  .merlin  1.xs  README  README.md  dune  dune-project  xs.ml  xs.opam  xs.sh
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/default/: xs.dune-package  xs.install
_build/default/.dune/: configurator
_build/default/.utop/.utop.eobjs/: utop.ml-gen.d
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmi  dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/src/: .merlin  context.re  context.re.ml  defs.re  defs.re.ml  eval.re  eval.re.ml  lib.re  lib.re.ml  parser.re.ml  stk.re  stk.re.ml  xs.re.ml
_build/default/src/.utop/: utop.ml-gen
_build/default/src/.utop/.utop.eobjs/: utop.ml-gen.d
_build/default/src/.xs.eobjs/: context.re.ml.d  defs.re.ml.d  dune__exe.ml-gen  dune__exe__Lib.impl.all-deps  dune__exe__Parser.impl.all-deps  dune__exe__Stk.impl.all-deps  dune__exe__Xs.impl.all-deps  eval.re.ml.d  lib.re.ml.d  parser.re.ml.d  stk.re.ml.d  xs.re.ml.d
_build/default/src/.xs.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Context.cmi  dune__exe__Context.cmo  dune__exe__Context.cmt  dune__exe__Defs.cmi  dune__exe__Defs.cmo  dune__exe__Defs.cmt  dune__exe__Eval.cmi  dune__exe__Eval.cmo  dune__exe__Eval.cmt  dune__exe__Lib.cmi  dune__exe__Lib.cmo  dune__exe__Lib.cmt  dune__exe__Parser.cmi  dune__exe__Parser.cmo  dune__exe__Parser.cmt  dune__exe__Stk.cmi  dune__exe__Stk.cmo  dune__exe__Stk.cmt  dune__exe__Xs.cmi  dune__exe__Xs.cmo  dune__exe__Xs.cmt
doc/: conf.py  examples.rst  index.rst  installation.rst  reference.rst  tutorial.rst
examples/: 1.xs  3.xs
src/: .merlin  context.ml  defs.ml  defs.re  dune  eval.ml  eval.re  lib.ml  lib.re  parser.ml  parser.re  repl.ml  rt.ml  stk.ml  stk.re  tests.ml  top.ml  vm.ml  xs.ml  xs.re
(+13 files in other folders)
